# origin

PIO/pid_control/: platformio.ini
PIO/pid_control/src/: main.cpp  pid.hpp
PIO/pub_odom/: platformio.ini
PIO/pub_odom/lib/Kinematic/: Kinematic.cpp  Kinematic.hpp
PIO/pub_odom/lib/pid_control/: pid.cpp
PIO/pub_odom/src/: main.cpp
YOLO/: fire_find.py  fire_trian.py
YOLO/runs/detect/train/: args.yaml
YOLO/runs/detect/train2/: args.yaml
YOLO/runs/detect/train3/: args.yaml
YOLO/runs/detect/train4/: args.yaml  results.csv
YOLO/runs/detect/train5/: args.yaml  results.csv
YOLO/runs/detect/train6/: args.yaml
YOLO/runs/detect/train7/: args.yaml  results.csv
ros2/dev_example/src/TF_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/action_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/action_learning/include/example_action/: robot.h
ros2/dev_example/src/action_learning/src/: action_control.cpp  action_robot.cpp  robot.cpp
ros2/dev_example/src/cartographer_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/example_ros2_interfaces/: CMakeLists.txt  package.xml
ros2/dev_example/src/launch_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/learning_node/: CMakeLists.txt  package.xml
ros2/dev_example/src/nav2_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/param_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/service_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/topic_learning/: CMakeLists.txt  package.xml
ros2/dev_example/src/urdf_learning/: package.xml  setup.cfg  setup.py
stm32/task/: .mxproject  task.ioc
stm32/task/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_it.h
stm32/task/Core/Src/: freertos.c  fsmc.c  gpio.c  (+4 more)
stm32/task/EWARM/: Project.eww  task.ewd  task.ewp
stm32/task/MDK-ARM/: MDK-ARM.code-workspace  startup_stm32f103xe.lst  task.uvguix.chaffer  task.uvoptx  task.uvprojx
(+503 files in other folders)
